Terminada la pagina de registro de productos

--- a/src/src/views/products/createProduct.ejs
+++ b/src/src/views/products/createProduct.ejs
@@ -10,11 +10,8 @@
             </div>
             <div class="info">
                 <label for="description">Descripción: </label>
-                <input type="text" name="description" id="description">
-            </div>
-            <div class="info">
-                <label for="image">Imagen: </label>
-                <input type="file" name="image" id="image">
+                <!-- <input type="text" name="description" id="description"> -->
+                <textarea name="description" id="description" cols="40" rows="5"></textarea>
             </div>
             <div class="info">
                 <label for="category">Categoria: </label>
@@ -27,6 +24,10 @@
             <div class="info">
                 <label for="price">Precio: </label>
                 <input type="number" name="price" id="price">
+            </div>
+            <div class="info">
+                <label for="image">Imagen: </label>
+                <input type="file" name="image" id="image">
             </div>
             <button type="submit" id="submit-product">Registrar</button>
         </form>
