--- a/src/public/css/stylesCreateProduct.css
+++ b/src/public/css/stylesCreateProduct.css
@@ -68,6 +68,27 @@ input {
     outline: none;
 }
 
+input:hover,input:focus{
+    border: 0.5px black solid ;
+    border-radius: 20px;
+}
+
+textarea {
+    display: block;
+    flex-grow: 1;
+    margin: 10px 20px;
+    width: 400px;
+    /* height: 30px; */
+    border: 0.5px gray solid;
+    border-radius: 10px;
+    outline: none;
+}
+
+textarea:focus, textarea:hover{
+    border: 0.5px black solid;
+    border-radius: 10px;
+}
+
 #image {
     border: none;
     border-radius: 0;
@@ -83,4 +104,10 @@ input {
     width: 110px;
     height: 40px;
     border: 1px black solid;
+}
+
+@media (min-width: 576px){
+    .product-register{
+        max-width: 450px;
+    }
 }
