--- a/src/public/css/stylesCreateProduct.css
+++ b/src/public/css/stylesCreateProduct.css
@@ -106,6 +106,11 @@ textarea:focus, textarea:hover{
     border: 1px black solid;
 }
 
+#submit-product:hover {
+    background-color: black;
+    color: white;
+}
+
 @media (min-width: 576px){
     .product-register{
         max-width: 450px;
