--- a/src/src/views/products/createProduct.ejs
+++ b/src/src/views/products/createProduct.ejs
@@ -3,19 +3,19 @@
     <a class="central-logo" href="/"><img class="central-BMG" src="/images/logoBMG.png" alt="Logo del Sitio E-commerceBGG"></a> <!--<i class="fas fa-compact-disc"></i>-->  
     <h1>Registro de Producto</h1>
     <section class="container">
-        <form action="" class="product-register" method="POST">
+        <form action="#" class="product-register" method="POST">
             <div class="info">
                 <label for="name">Nombre del producto: </label>
-                <input type="text" name="name" id="name">
+                <input type="text" name="name" id="name" required>
             </div>
             <div class="info">
                 <label for="description">Descripción: </label>
                 <!-- <input type="text" name="description" id="description"> -->
-                <textarea name="description" id="description" cols="40" rows="5"></textarea>
+                <textarea name="description" id="description" cols="40" rows="5" required></textarea>
             </div>
             <div class="info">
                 <label for="category">Categoria: </label>
-                <input type="text" name="category" id="category">
+                <input type="text" name="category" id="category" required>
             </div>
             <div class="info">
                 <label for="specs">Especificaciones: </label>
@@ -23,7 +23,7 @@
             </div>
             <div class="info">
                 <label for="price">Precio: </label>
-                <input type="number" name="price" id="price">
+                <input type="number" name="price" id="price" >
             </div>
             <div class="info">
                 <label for="image">Imagen: </label>
