--- a/src/src/views/products/editProduct.ejs
+++ b/src/src/views/products/editProduct.ejs
@@ -8,6 +8,7 @@
                 <label for="id">ID del producto: </label>
                 <input type="number" name="id" id="id" required>
             </div>
+            <button id="search">Buscar</button>
             <div class="info">
                 <label for="name">Nombre: </label>
                 <input type="text" name="name" id="name" required>
