Creación de páginas, 404 y productos.
Se crearon las páginas 404 con todas sus configuraciones pertinentes
además de la página de productos, ambas de forma responsiva, siguiendo
la estrategia de diseño de Mobile First y con sus respectivas hojas de
estil y con sus respectivas hojas de estilo.

Se modificaron las reglas de estilo CSS de la página de detalle de
producto para tener un mayor y correcto espaciado entre el Footer y el
contenido en si.

--- a/src/public/css/stylesDetail.css
+++ b/src/public/css/stylesDetail.css
@@ -91,7 +91,7 @@ h2 .banner-artistName a{
   text-align: left;
 }
 .banner-preview {
-  max-width: 50%;
+  max-width: 100%;
   height: 152px;
   display: inline-block;
 }
@@ -149,13 +149,17 @@ button {
 }
 
 .lista {
-  margin-top: 30px;
+  margin: 30px 0;
   text-align: center;
   font-size: 140%;
   align-items: center;
   display: flex;
   flex-flow: column;
   justify-content: center;
+}
+
+.lista h2 {
+  margin: 0 0 40px 0;
 }
 
 .cancion {
@@ -225,6 +229,7 @@ button {
   .banner-header a{
     font-size: 20px;
   }
+
 }
 
 @media (min-width:1300px) {
@@ -241,6 +246,10 @@ button {
   .container{
     width: 1460px;
   }  
+
+  .lista {
+    margin: 60px 0;
+  }
 
 }
 
