--- a/src/public/css/stylesDetail.css
+++ b/src/public/css/stylesDetail.css
@@ -1,6 +1,7 @@
 * {
   margin: 0px 0px;
   font-family: "Roboto";
+  box-sizing: border-box;
 }
 
 .navbar {
@@ -90,7 +91,7 @@ h2 .banner-artistName a{
   text-align: left;
 }
 .banner-preview {
-  max-width: 50%;
+  max-width: 100%;
   height: 152px;
   display: inline-block;
 }
@@ -148,13 +149,17 @@ button {
 }
 
 .lista {
-  margin-top: 30px;
+  margin: 30px 0;
   text-align: center;
   font-size: 140%;
   align-items: center;
   display: flex;
   flex-flow: column;
   justify-content: center;
+}
+
+.lista h2 {
+  margin: 0 0 40px 0;
 }
 
 .cancion {
@@ -217,9 +222,14 @@ button {
     width: 960px;
   }  
 
+  .banner-header, .banner-aditional {
+    padding-left: 0px;
+  }
+
   .banner-header a{
     font-size: 20px;
   }
+
 }
 
 @media (min-width:1300px) {
@@ -237,6 +247,10 @@ button {
     width: 1460px;
   }  
 
+  .lista {
+    margin: 60px 0;
+  }
+
 }
 
 @media (min-width:1800px) {
@@ -244,4 +258,7 @@ button {
   .container{
     width: 1760px;
   }  
+  .banner-header{
+    padding-left: 0%;
+  }
 }
