Modificaciones parciales a diferentes archivos
Primeramente se modifico la hoja de estilo de el archivo parcial del
header y del footer para que se mostraran correctamente de forma
adaptativa, sensitiva.

Posteriormente la hoja de estilo de la página principal también sufrio
cambios para que los enlaces que se agregaron a los botones no mostraran
su decoración de underline.

En el controlador principal se importo la base de datos de productos
.json para su compartición de parámetros asi también como la creación de
otro objeto literal pero este con la descripción necesaria para la
primera sección del main, objeto literal con nombre : 'firstSection'.

También en el controlador de productos se importo la misma base de datos
de productos para hacer uso de esta en la vista de forma dinámica,
además de una pequeña y muy sencilla valicación de rutas, en caso de que
no existan se mandara la página por defecto de error 404.

Se creo la base de datos en archivos JSON de los usuarios y los
productos con campos arbitrarios hasta el momento.

Se modifico la vista principal para que fuera dinámica una vez se
compartieron los parametros por el método especifico de esa ruta.

Lo mismo para la página de productos, es decir, el uso de los parámetros
compartidos y asi brindar dinamismo a la página.

Y finalmente, el archivo parcial footer sufrio cambios para mostrar las
páginas apropiadas, con los enlaces apropiados para resolver asi el
problema de que no se mostro a tiempo la vista de 'editar producto' y
'creación de producto'.

--- a/src/src/views/main/index.ejs
+++ b/src/src/views/main/index.ejs
@@ -4,49 +4,40 @@
     <section class="first-section">
         <div class="title-paragraph-and-elements-until-992">
             <div class="title-paragraph-until-992">
-                <h1 id="principal-title">Mensaje de Genero Musical o Hit del Momento dependiente al Elemento Seleccionado.</h1>
-                <p class="paragraph-until-992">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis pariatur in, ipsa deserunt exercitationem ea. Quidem maxime illo nihil atque, laborum labore fugiat, doloremque, ducimus necessitatibus commodi sunt esse iusto?</p>
+                <h1 id="principal-title"><%= firstSection.title %></h1>
+                <p class="paragraph-until-992"><%= firstSection.description %><p>
             </div>
             <article class="elements-until-992">
-                <button class="Right-Scroll-until-992" id="element1">Elemento 1</button>
-                <button class="Right-Scroll-until-992" id="element2">Elemento 2</button>
-                <button class="Right-Scroll-until-992" id="element3">Elemento 3</button>
+                <% for(let i = 0; i < firstSection.elements.length; i++) { %>
+                <button class="Right-Scroll-until-992" id="element<%= firstSection.elements[i].id %>"><a href="<%= firstSection.elements[i].link %>"><%= firstSection.elements[i].elementName %></a></button>
+                <% } %>
             </article>
         </div>
         <div class="paragraph-and-elements">
-            <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis pariatur in, ipsa deserunt exercitationem ea. Quidem maxime illo nihil atque, laborum labore fugiat, doloremque, ducimus necessitatibus commodi sunt esse iusto?</p>
+            <p class="paragraph"><%= firstSection.description %></p>
             <article class="elements-until-768">
-                <button class="Right-Scroll-until-768" id="element1">Elemento 1</button>
-                <button class="Right-Scroll-until-768" id="element2">Elemento 2</button>
-                <button class="Right-Scroll-until-768" id="element3">Elemento 3</button>
+                <% for(let i = 0; i < firstSection.elements.length; i++) { %>
+                    <button class="Right-Scroll-until-768" id="element<%= firstSection.elements[i].id %>"><a href="<%= firstSection.elements[i].link %>"><%= firstSection.elements[i].elementName %></a></button>
+                <% } %>
             </article>
         </div>
-        <button class="add-cart">Añadir al Carrito</button>
+        <button class="add-cart"><a href="/carrito-de-compras">Añadir al Carrito</a></button>
         <article class="elements">
-            <button class="Right-Scroll">Elemento 1</button>
-            <button class="Right-Scroll">Elemento 2</button>
-            <button class="Right-Scroll">Elemento 3</button>
+            <% for(let i = 0; i < firstSection.elements.length; i++) { %>
+                <button class="Right-Scroll"><a href="<%= firstSection.elements[i].link %>"><%= firstSection.elements[i].elementName %></a></button>
+            <% } %>
         </article>
     </section>
+
     <section class="album-section">
-        <article class="album-home" id="house">
-            <img id="strictly" src="/images/strictlyrhythm.jpg" alt="Imágen de Album">
-            <h2>Lo mejor de Strictly Rhythm</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores accusamus dolor aperiam! Nesciunt blanditiis aliquid explicabo fugit possimus quia esse? Tempora, nemo aspernatur? Sit enim possimus, dolor tempora laboriosam fugiat.</p>
-            <a href="/productos/1">ir a la colección ---></a>
+        <% for(let i = 0; i < products.length; i++) { %>
+        <article class="album-home" id="<%= products[i].IDContainer %>">
+            <img id="<%= products[i].IDImage %>" src="/images/<%= products[i].image %>" alt="Imágen de Album">
+            <h2><%= products[i].title %></h2>
+            <p><%= products[i].description %></p>
+            <a href="/productos/<%= products[i].id %>"><%= products[i].finalMessage %></a>
         </article>
-        <article class="album-home" id="rock">
-            <img id="beatles" src="/images/pleasepleaseme.jpg" alt="Imágen de Album">
-            <h2>El inicio de una gran historia</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores accusamus dolor aperiam! Nesciunt blanditiis aliquid explicabo fugit possimus quia esse? Tempora, nemo aspernatur? Sit enim possimus, dolor tempora laboriosam fugiat.</p>
-            <a href="/productos/1">ir a la colección ---></a>
-        </article>
-        <article class="album-home" id="techno">
-            <img id="underground" src="/images/greenvelvet.jpg" alt="Imágen de Album">
-            <h2>Underground para variar</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores accusamus dolor aperiam! Nesciunt blanditiis aliquid explicabo fugit possimus quia esse? Tempora, nemo aspernatur? Sit enim possimus, dolor tempora laboriosam fugiat.</p>
-            <a href="/productos/1">ir a la colección ---></a>
-        </article>
+        <% } %>
     </section>
     <%- include('../partials/footer') %>
 </body>
