--- a/src/src/views/partials/footer.ejs
+++ b/src/src/views/partials/footer.ejs
@@ -9,27 +9,26 @@
             </article>
         </div>
         <div class="extra-info" id="first">
-                    <h3>Título de la Sección 1</h3>
+                    <h3>Colecciones</h3>
                     <ul class="unordered-list">
-                        <li>Elemento 1</li>
-                        <li>Elemento 2</li>
-                        <li>Elemento 3</li>
+                        <li><a href="/productos">Explorar</a></li>
+                        <li><a href="/productos/generos">Generos</a></li>
+                        <li><a href="/productos/artistas">Artistas</a></li>
                     </ul>
         </div>
         <div class="extra-info" id="second">
-                    <h3>Título de la Sección 2</h3>
+                    <h3>Mi Cuenta</h3>
                     <ul class="unordered-list">
-                        <li>Elemento 1</li>
-                        <li>Elemento 2</li>
-                        <li>Elemento 3</li>
+                        <li><a href="/usuario/inicio-de-sesion">Iniciar Sesión</a></li>
+                        <li><a href="/usuario/registro">Registrarse</a></li>
                     </ul>
         </div>
         <div class="extra-info" id="third">
-                    <h3>Título de la Sección 3</h3>
+                    <h3>General</h3>
                     <ul class="unordered-list">
-                        <li>Elemento 1</li>
-                        <li>Elemento 2</li>
-                        <li>Elemento 3</li>
+                        <li><a href="/nosotros">Quienes somos</a></li>
+                        <li><a href="/productos/crear">Vender Vinyl</a></li>
+                        <li><a href="/productos/1/editar">Editar Vinyl</a></li>
                     </ul>
         </div>
     </div>
