--- a/src/public/css/header-footer.css
+++ b/src/public/css/header-footer.css
@@ -161,7 +161,7 @@ footer h2 {
 }
 
 .extra-info h3 {
-    color: white;
+    color: rgb(206, 206, 206);
     margin: 10px;
     padding: 0 0 0 15px;
     font-weight: 300;
@@ -175,6 +175,11 @@ footer h2 {
     list-style: none;
     text-align: left;
     padding: 8px;
+}
+
+li a {
+    color: #9195a3;
+    text-decoration: none;
 }
 
 @media (min-width: 576px) {
@@ -213,6 +218,7 @@ footer h2 {
     .extra-info h3 {
         margin: 5px;
         font-size: 13px;
+        padding: 0;
     }
     /*
     .extra-info ul li {
@@ -236,6 +242,11 @@ footer h2 {
     .extra-info ul li {
         font-size: 14px;
     }
+
+    .extra-info .unordered-list {
+        padding: 0;
+    }
+
 
 }
 
@@ -293,6 +304,11 @@ footer h2 {
     .cart {
         align-self: center;
         order: 6;
+    }
+
+    
+    .extra-info ul li a {
+        font-size: 14px;
     }
 
 }
