--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -13,6 +13,10 @@ body {
     height: 690px;
 }
 
+button a {
+    text-decoration: none;
+}
+
 #principal-title {
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
