--- a/src/public/css/stylesLogin.css
+++ b/src/public/css/stylesLogin.css
@@ -117,7 +117,7 @@ input {
   margin: 10px auto;
   background-color: white;
   text-align: center;
-  color: grey;
+  color: rgb(0, 0, 0);
   display: inline-block;
   border-radius: 25px;
   height: 40px;
@@ -126,7 +126,7 @@ input {
 }
 
 #submit-button:hover {
-  background-color: rgb(90, 90, 90);
+  background-color: rgb(0, 0, 0);
   color: white;
 }
 
