--- a/src/public/css/stylesRegister.css
+++ b/src/public/css/stylesRegister.css
@@ -103,7 +103,7 @@ input {
     margin: 0 auto;
     background-color: white;
     text-align: center;
-    color: grey;
+    color: rgb(0, 0, 0);
     display: inline-block;
     border-radius: 25px;
     height: 40px;
@@ -112,7 +112,7 @@ input {
 }
 
 #submit-button:hover {
-    background-color: rgb(90, 90, 90);
+    background-color: rgb(0, 0, 0);
     color: white;
 }
 
