Datos de productos generados
Se modificaron las hojas de estilos de la página principal y de la de
productos para agregar las reglas de estilo nuevas con los colores
correspondientes.

Se agregaron nuevas imágenes a los recursos públicos estáticos para los
nuevos albums de prueba.

Se genero una nueva base de datos de productos en '/src/data/' con el
nombre de products.json, con 100 nuevos productos generados con la
página Mockaroo.

Se cambio de ubicación los archivos de productsInitial, antes
products.json, y de user.json a la carpeta de 'data' antes mencionada;
es decir, teniendo ahora 3 archivos JSON en esa carpeta 'data',
products.json, productsInitial.json y users.json.

--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -101,6 +101,11 @@ button a {
     margin: 10px;
     font-family: 'Roboto', sans-serif;
     padding: 10px;
+    transition: all 300ms;
+}
+
+.album-home:hover {
+    margin: 0;
 }
 
 .album-home#black {
@@ -171,6 +176,76 @@ button a {
     text-transform: uppercase;
     font-style: italic;
     color: white;
+}
+
+.album-home#red {
+    background-color: rgb(242, 85, 85);
+    color: white; 
+}
+
+
+.album-home#red p {
+    color: rgb(0, 0, 0);
+    font-weight: 300;
+    font-size: 18px;
+    text-align: left;
+    padding: 0 7px 20px 7px;
+}
+
+.album-home#red a {
+    display: block;
+    text-align: right;
+    margin: 10px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-style: italic;
+    color: white;
+}
+
+.album-home#brown {
+    background-color: rgb(181, 108, 69);;
+    color: white;
+}
+
+.album-home#brown p {
+    color: rgb(240, 240, 240);
+    font-weight: 300;
+    font-size: 18px;
+    text-align: left;
+    padding: 0 7px 20px 7px;
+}
+
+.album-home#brown a {
+    display: block;
+    text-align: right;
+    margin: 10px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-style: italic;
+    color: black
+}
+
+.album-home#blue {
+    background-color: rgb(59, 57, 187);
+    color: rgb(0, 0, 0);
+}
+
+.album-home#blue p {
+    color: white;
+    font-weight: 300;
+    font-size: 18px;
+    text-align: left;
+    padding: 0 7px 20px 7px;
+}
+
+.album-home#blue a {
+    display: block;
+    text-align: right;
+    margin: 10px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-style: italic;
+    color: rgb(95, 95, 95);
 }
 
 .album-home #standardImage {
@@ -311,7 +386,6 @@ h2 {
         text-decoration: none;
         text-transform: uppercase;
         font-style: italic;
-        color: black
     }
 
     .album-home#black {
@@ -325,6 +399,21 @@ h2 {
     }
 
     .album-home#strongGreen {
+        width: 47%;
+        height: 50%;
+    }
+
+    .album-home#red {
+        width: 47%;
+        height: 50%;
+    }
+
+    .album-home#brown {
+        width: 47%;
+        height: 50%;
+    }
+
+    .album-home#blue {
         width: 47%;
         height: 50%;
     }
@@ -479,6 +568,18 @@ h2 {
         width: 30%;
     }
 
+    .album-home#red {
+        width: 30%;
+    }
+
+    .album-home#brown {
+        width: 30%;
+    }
+
+    .album-home#blue {
+        width: 30%;
+    }
+
 }
 
 @media (min-width: 1200px) {
@@ -573,7 +674,6 @@ h2 {
         text-decoration: none;
         text-transform: uppercase;
         font-style: italic;
-        color: black
     }
 
 }
