--- a/src/public/css/stylesProducts.css
+++ b/src/public/css/stylesProducts.css
@@ -34,39 +34,154 @@ body {
     margin: 10px;
     font-family: 'Roboto', sans-serif;
     padding: 10px;
+    transition: all 300ms;
 }
 
-.album-home p {
+.album-home:hover {
+    margin: 0;
+}
+
+.album-home#black {
+    background-color: gray;
+    color: black
+}
+
+
+.album-home#black p {
     color: white;
-    font-weight: 100;
+    font-weight: 300;
     font-size: 18px;
     text-align: left;
-    padding: 0 5px 20px 5px;
+    padding: 0 7px 20px 7px;
 }
 
-.album-home#house {
-    background-color: gray;
+.album-home#black a {
+    display: block;
+    text-align: right;
+    margin: 10px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-style: italic;
+    color: black
 }
 
-.album-home #strictly {
-    width: 100%;
-    height: 50%;
+.album-home#yellow {
+    background-color: rgb(255, 227, 65);
+    color: black;
 }
 
-.album-home#rock {
-    background-color: yellow;
+.album-home#yellow p {
+    color: black;
+    font-weight: 300;
+    font-size: 18px;
+    text-align: left;
+    padding: 0 7px 20px 7px;
 }
 
-.album-home #beatles {
-    width: 100%;
-    height: 50%;
+.album-home#yellow a {
+    display: block;
+    text-align: right;
+    margin: 10px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-style: italic;
+    color: black
 }
 
-.album-home#techno {
+.album-home#strongGreen {
     background-color: green;
+    color: white;
 }
 
-.album-home #underground {
+.album-home#strongGreen p {
+    color: white;
+    font-weight: 300;
+    font-size: 18px;
+    text-align: left;
+    padding: 0 7px 20px 7px;
+}
+
+.album-home#strongGreen a {
+    display: block;
+    text-align: right;
+    margin: 10px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-style: italic;
+    color: white;
+}
+
+.album-home#red {
+    background-color: rgb(242, 85, 85);
+    color: white; 
+}
+
+
+.album-home#red p {
+    color: rgb(0, 0, 0);
+    font-weight: 300;
+    font-size: 18px;
+    text-align: left;
+    padding: 0 7px 20px 7px;
+}
+
+.album-home#red a {
+    display: block;
+    text-align: right;
+    margin: 10px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-style: italic;
+    color: white;
+}
+
+.album-home#brown {
+    background-color: rgb(181, 108, 69);;
+    color: white;
+}
+
+.album-home#brown p {
+    color: rgb(240, 240, 240);
+    font-weight: 300;
+    font-size: 18px;
+    text-align: left;
+    padding: 0 7px 20px 7px;
+}
+
+.album-home#brown a {
+    display: block;
+    text-align: right;
+    margin: 10px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-style: italic;
+    color: black
+}
+
+.album-home#blue {
+    background-color: rgb(59, 57, 187);
+    color: rgb(0, 0, 0);
+}
+
+.album-home#blue p {
+    color: white;
+    font-weight: 300;
+    font-size: 18px;
+    text-align: left;
+    padding: 0 7px 20px 7px;
+}
+
+.album-home#blue a {
+    display: block;
+    text-align: right;
+    margin: 10px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-style: italic;
+    color: rgb(95, 95, 95);
+}
+
+.album-home #standardImage {
     width: 100%;
     height: 50%;
 }
@@ -126,20 +241,34 @@ h2 {
         text-decoration: none;
         text-transform: uppercase;
         font-style: italic;
-        color: black
     }
 
-    .album-home#house {
+    .album-home#black {
         width: 47%;
         height: 50%;
     }
 
-    .album-home#rock {
+    .album-home#yellow {
         width: 47%;
         height: 50%;
     }
 
-    .album-home#techno {
+    .album-home#strongGreen {
+        width: 47%;
+        height: 50%;
+    }
+
+    .album-home#red {
+        width: 47%;
+        height: 50%;
+    }
+
+    .album-home#brown {
+        width: 47%;
+        height: 50%;
+    }
+
+    .album-home#blue {
         width: 47%;
         height: 50%;
     }
@@ -174,15 +303,27 @@ h2 {
         color: black
     }
 
-    .album-home#house {
+    .album-home#black {
         width: 30%;
     }
 
-    .album-home#rock {
+    .album-home#yellow {
         width: 30%;
     }
 
-    .album-home#techno {
+    .album-home#strongGreen {
+        width: 30%;
+    }
+
+    .album-home#red {
+        width: 30%;
+    }
+
+    .album-home#brown {
+        width: 30%;
+    }
+
+    .album-home#blue {
         width: 30%;
     }
 
@@ -220,7 +361,6 @@ h2 {
         text-decoration: none;
         text-transform: uppercase;
         font-style: italic;
-        color: black
     }
 
 }
