--- a/src/public/css/stylesEditProduct.css
+++ b/src/public/css/stylesEditProduct.css
@@ -50,6 +50,9 @@ h1 {
     display: flex;
     flex-wrap: wrap;
 }
+.info img {
+    margin: 0 60px;
+}
 
 label {
     display: block; 
@@ -82,6 +85,7 @@ textarea {
     border: 0.5px gray solid;
     border-radius: 10px;
     outline: none;
+    text-align: left;
 }
 
 textarea:focus, textarea:hover{
