se modifico la vista del producto individual, se agrego una seccion de songs en la base de datos(unicamenta al primer elemento) y se modifico la hoja de estilos

--- a/src/public/css/stylesDetail.css
+++ b/src/public/css/stylesDetail.css
@@ -169,8 +169,15 @@ button {
   width: 80%;
   height: 40px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
+}
+
+.numero{
+  margin-left: 50px;
+}
+.duracion{
+  margin-right: 50px;
 }
 
 
