--- a/src/src/views/products/productDetail.ejs
+++ b/src/src/views/products/productDetail.ejs
@@ -7,13 +7,13 @@
       </div>
       <div class="container">
         <div class="banner-header">
-          <h1 class="banner-albumName">Album</h1>
+          <h1 class="banner-albumName"><%= products[id-1].title %></h1>
           <label class="banner-artistName">
-            <a href="#">artista</a>
+            <a href="#"><%= products[id-1].artist %></a>
           </label>
         </div>
         <div class="banner-preview">
-          <img src="/images/greenvelvet.jpg" alt="" />
+          <img id="<%= products[id-1].IDImage %>" src="/images/<%= products[id-1].image %>" alt="Imágen de Album">
         </div>
         <div class="banner-aditional">
           <div class="banner-year"><p><date>1999</date></p></div>
@@ -23,7 +23,7 @@
     <div class="agregar">
       <div class="precio">
         <p>Precio</p>
-        <p><strong>$12.34</strong></p>
+        <p><strong>$<%= products[id-1].price %></strong></p>
       </div>
       <div class="carrito">
         <button>Agregar al carrito</button>
@@ -31,7 +31,14 @@
     </div>
     <div class="lista">
       <h2>Canciones</h2>
+      <% for(let i = 0; i< products[id-1].songs.length; i++){ %>
       <div class="cancion">
+        <p class="numero"> #<%=i+1 %> </p>
+        <p> <%= products[id-1].songs[i].title %> </p>
+        <p class="duracion"> <%= products[id-1].songs[i].length %> </p>
+      </div>
+      <% } %>
+      <!-- <div class="cancion">
         <p>#</p>
         <p>Titulo cancion</p>
         <p>3:00</p>
@@ -55,12 +62,7 @@
         <p>#</p>
         <p>Titulo cancion</p>
         <p>3:00</p>
-      </div>
-      <div class="cancion">
-        <p>#</p>
-        <p>Titulo cancion</p>
-        <p>3:00</p>
-      </div>
+      </div> -->
     </div>
     <%- include('../partials/footer') %>
   </body>
