--- a/src/src/views/products/editProduct.ejs
+++ b/src/src/views/products/editProduct.ejs
@@ -11,29 +11,29 @@
             <button id="search">Buscar</button> -->
             <div class="info">
                 <label for="name">Nombre: </label>
-                <input type="text" name="name" id="name" required value="  <%= products[id].title %>">
+                <input type="text" name="name" id="name" required value="  <%= products[id-1].title %>">
             </div>
             <div class="info">
                 <label for="artist">Artista: </label>
-                <input type="text" name="artist" id="artist" value=" <%= products[id].artist %>">
+                <input type="text" name="artist" id="artist" value=" <%= products[id-1].artist %>">
             </div>
             <div class="info">
                 <label for="genero">Genero: </label>
-                <input type="text" name="category" id="category" required value=" <%= products[id].genre%>">
+                <input type="text" name="category" id="category" required value=" <%= products[id-1].genre%>">
             </div>
             <div class="info">
                 <label for="description">Descripción: </label>
                 <textarea name="description" id="description" cols="20" rows="5" required>
-                    <%= products[id].description %>
+                    <%= products[id-1].description %>
                 </textarea>
             </div>
             <div class="info">
                 <label for="price">Precio: </label>
-                <input type="number" name="price" id="price" value="<%=products[id].price %>">
+                <input type="number" name="price" id="price" value="<%=products[id-1].price %>">
             </div>
             <div class="info">
                 <label for="image">Imagen: </label>
-                <img id="<%= products[id].IDImage %>" src="/images/<%= products[id].image %>" alt="Imágen de Album" width="200px">
+                <img id="<%= products[id-1].IDImage %>" src="/images/<%= products[id-1].image %>" alt="Imágen de Album" width="200px">
                 <!-- <input type="file" name="image" id="image"> -->
             </div>
             <button type="submit" id="submit-product">Modificar</button>
