se agregaron las rutas y metodos para hacer modificaciones y agregar productos

--- a/src/src/views/products/editProduct.ejs
+++ b/src/src/views/products/editProduct.ejs
@@ -3,7 +3,7 @@
     <a class="central-logo" href="/"><img class="central-BMG" src="/images/logoBMG.png" alt="Logo del Sitio E-commerceBGG"></a> <!--<i class="fas fa-compact-disc"></i>-->  
     <h1>Modificar producto</h1>
     <section class="container">
-        <form action="" class="product-edit" method="POST">
+        <form action="actualizar?_method=PUT" class="product-edit" method="POST">
             <!-- <div class="info">
                 <label for="id">ID del producto: </label>
                 <input type="number" name="id" id="id" required>
