--- a/src/src/views/products/createProduct.ejs
+++ b/src/src/views/products/createProduct.ejs
@@ -3,7 +3,7 @@
     <a class="central-logo" href="/"><img class="central-BMG" src="/images/logoBMG.png" alt="Logo del Sitio E-commerceBGG"></a> <!--<i class="fas fa-compact-disc"></i>-->  
     <h1>Registro de Producto</h1>
     <section class="container">
-        <form action="#" class="product-register" method="POST">
+        <form action="crear" class="product-register" method="POST">
             <div class="info">
                 <label for="name">Nombre del producto: </label>
                 <input type="text" name="name" id="name" required>
