Modificaciones en Controller, footer, editProduct, Styles etc
Se modifico la página de editProduct, para la vista, su método del
controlador, su estilo para el nuevo botón.

Se modifico la vista de Edición de producto, y el footer, quitandole la
instrucción de 'Editar Vynil'.

--- a/src/public/css/stylesDetail.css
+++ b/src/public/css/stylesDetail.css
@@ -139,6 +139,30 @@ h2 .banner-artistName a{
   /* color: white; */
 }
 
+.editar {
+  text-align: center;
+  width: 30%;
+  margin: 0 auto 40px;
+
+}
+
+.editar button{
+  border-radius: 20px;
+  background-color: #4b51ed;
+  width: 110px;
+}
+
+.editar button:hover{
+  background-color: #15199d;
+  /* color: white; */
+}
+
+.editar button a {
+  text-decoration: none;
+  color:rgb(223, 223, 223);
+}
+
+
 button {
   width: 80%;
   height: 100%;
