--- a/src/src/views/products/productDetail.ejs
+++ b/src/src/views/products/productDetail.ejs
@@ -64,6 +64,9 @@
         <p>3:00</p>
       </div> -->
     </div>
+    <div class="editar">
+      <button><a href="/productos/<%= product.id %>/editar">Editar Producto</a></button>
+    </div>
     <%- include('../partials/footer') %>
   </body>
 </html>
