--- a/src/src/views/partials/footer.ejs
+++ b/src/src/views/partials/footer.ejs
@@ -28,7 +28,7 @@
                     <ul class="unordered-list">
                         <li><a href="/nosotros">Quienes somos</a></li>
                         <li><a href="/productos/crear">Vender Vinyl</a></li>
-                        <li><a href="/productos/1/editar">Editar Vinyl</a></li>
+                        <!-- <li><a href="/productos/1/editar">Editar Vinyl</a></li> -->
                     </ul>
         </div>
     </div>
