coreccion controlado y vista de la creacion de productos

--- a/src/src/views/products/createProduct.ejs
+++ b/src/src/views/products/createProduct.ejs
@@ -35,8 +35,7 @@
             </div>
             <div class="info">
                 <label for="color" id="color-selector">Color predominante del album (o color parecido)</label>
-                
-                <select name="color-album" id="color-album">
+                <select name="color" id="color-album">
                   <option value="black">Negro</option>
                   <option value="yellow">Amarillo</option>
                   <option value="green velvet">Verde</option>
